--- a/www/index.html
+++ b/www/index.html
@@ -16,22 +16,24 @@
 			<h1>GUI</h1>
 		  </div>
 		  <div data-role="main" class="ui-content">
-			<p>The graphical user interface (GUI), is a type of user interface that allows users to interact with electronic
-
-devices through graphical icons and visual indicators such as secondary notation, instead of text-based user
-
-interfaces, typed command labels or text navigation. GUIs were introduced in reaction to the perceived steep
-
-learning curve of command-line interfaces (CLIs), which require commands to be typed on a computer
-
-keyboard.</p>
+			<p>Piotr S</p>
+			  <p>adres email</p>
+			  <p>IS</p>
+			  <a href="#interestsPage" class="ui-btn">Interests</a>
 			
 		  </div>
 		  <div data-role="footer" data-position="fixed">
 			<h1>(c) Piotr S</h1>
 		  </div> 
 		</div> 
-		
+		<div data-role="page" id="interestsPage" data-dialog="true">
+			<div data-role="header" data-theme="a">
+				<h1>It's me</h1>
+			</div>
+			<div role="main" class="ui-content">
+				<p>moje zainteresowania</p>
+			</div>
+		</div>
 				
 		
 	</body>
